--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     background-size: cover;
 }
 
+#results {
+    background-color: #ececec;
+}
+
 .roboto-bold {
     font-weight: 700;
     font-style: normal;
@@ -29,13 +33,13 @@ body {
     letter-spacing:3px;
 }
 
-.title{
+.title {
     font-size: 85px;
     letter-spacing: 6px;
     line-height: .95em;
 }
 
-.dot-line{
+.dot-line {
     content:"";
     top: 0;
     bottom: 0;
@@ -43,12 +47,16 @@ body {
     border-left: 4px dotted #091625;
 }
 
-.countdown{
+.countdown {
     font-family:'Poppins', sans-serif;
     color: grey;
     font-size: 14px;
 }
 
-.countdown-box{
+.countdown-box {
     background-color: #262f3e;
+}
+
+.result-box {
+    background-color: white;
 }
